--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="header__inner flex">
                 <div class="logo">
                     <a href="https://t.me/tehnikum_tutor">
-                        <img src="images/logo.jpg" alt="">
+                        <img src="logo.jpg" alt="">
                     </a>
                 </div>
                 <div class="theme">
