--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                                 39.
                             </p>
                             <p class="content__item-text">
-                                ХреН
+                                ХРен
                             </p>
                         </li>
                         <li class="content__item">
